--- a/album-art-showcase/scss/main.scss
+++ b/album-art-showcase/scss/main.scss
@@ -1,14 +1,93 @@
-header {
-  background: red;
-      /*will be background img*/
-  height: 30vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+body {
+    background:black;
+    color: white;
 }
 
-h1 {
-  color: white;
-  text-align: center;
+header {
+    background-image: url(../img/profile-img.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 75vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.19+0,1+100 */
+        background: -moz-linear-gradient(top, rgba(0,0,0,0.19) 0%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, rgba(0,0,0,0.19) 0%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, rgba(0,0,0,0.19) 0%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#30000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+        z-index: 0;
+    }
+
+    .content {
+        z-index: 1;
+        position: relative;
+    }
+}
+
+.modal {
+    background-color: #190703eb;
+    .modal-footer{
+      background-color: #77383f;
+        a {
+            color: #fff;
+        }
+    }
+}
+
+.btn, .btn-large {
+  background: #77373f;
+}
+
+nav {
+    top: 0;
+    height: auto;
+    padding: 25px;
+    bottom: 0;
+    width: 400px;
+    background: #000000cf;
+    left: 0;
+    display: flex;
+    position: fixed;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.logo {
+    height: 120px;
+    text-align: center;
+}
+
+.menu ul {
+    display: grid;
+}
+
+.recently-played {
+    flex-grow: 1;
+}
+
+nav > div {
+    border-bottom: 1px solid #ffffff5c;
+    padding-bottom: 20px;
+}
+
+div {
+    box-sizing: border-box;
+}
+
+.grid {
+    margin-left: 400px;
 }
