--- a/album-art-showcase/scss/main.scss
+++ b/album-art-showcase/scss/main.scss
@@ -1,7 +1,21 @@
+@font-face {
+  font-family: 'gobold';
+  src: url(../fonts/gobold/gobold.otf);
+}
+
 body {
     background:black;
     color: white;
+    font-family: 'Lato', sans-serif;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'gobold', serif;
+}
+h1 {
+    font-size: 7em;
+}
+
 
 header {
     background-image: url(../img/profile-img.jpg);
@@ -12,6 +26,7 @@ header {
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     position: relative;
     &:after {
         content: "";
@@ -30,15 +45,32 @@ header {
     .content {
         z-index: 1;
         position: relative;
+        margin-left: 300px;
+        margin-top: -10vh;
     }
+    button.btn {
+        transform: rotate(-90deg);
+        transform-origin: bottom right;
+        position: fixed;
+        right: 0;
+        top: 25vh;
+        border-radius: 5px 5px 0 0;
+    }
+}
+.album h3 {
+    font-size: 1.5em;
+    letter-spacing: 1.5px;
 }
 
 .modal {
     background-color: #190703eb;
+    &.bottom-sheet{
+      max-height: initial;
+    }
     .modal-footer{
       background-color: #77383f;
-        a {
-            color: #fff;
+        button {
+            color: #fff!important;
         }
     }
 }
@@ -52,18 +84,21 @@ nav {
     height: auto;
     padding: 25px;
     bottom: 0;
-    width: 400px;
+    width: 300px;
     background: #000000cf;
     left: 0;
     display: flex;
     position: fixed;
     flex-direction: column;
     justify-content: space-around;
+
+    img {
+      max-height: 100%;
+    }
 }
 
 img {
     max-width: 100%;
-    max-height: 100%;
 }
 
 .logo {
@@ -89,5 +124,23 @@ div {
 }
 
 .grid {
-    margin-left: 400px;
+    display:  grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 50px;
+    margin-left: 300px;
+    padding: 25px;
+    margin-top: -12vh;
+    position: relative;
+    .square {
+      position: relative;
+      padding-top: 100%;
+    }
+    img {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
+    }
 }
